violating_resources/pod-security-policy/fsgroup/samples/psp-fsgroup/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata: # kpt-merge: /fsgroup-disallowed
  name: psp-fsgroup-example-allowed
spec:
  securityContext:
    fsGroup: 500 # directory will have group ID 500
  volumes:
    - name: fsgroup-demo-vol
      emptyDir: {}
  containers:
    - name: fsgroup-demo
      image: busybox
      command: ["sh", "-c", "sleep 1h"]
      volumeMounts:
        - name: fsgroup-demo-vol
          mountPath: /data/demo
