violating_resources/pod-security-policy/fsgroup/samples/psp-fsgroup/example_disallowed.yaml
apiVersion: v1
kind: Pod
metadata: # kpt-merge: /fsgroup-disallowed
  name: fsgroup-disallowed
spec:
  securityContext:
    fsGroup: 2000 # directory will have group ID 2000
  volumes:
  - name: fsgroup-demo-vol
    emptyDir: {}
  containers:
  - name: fsgroup-demo
    image: busybox
    command: ["sh", "-c", "sleep 1h"]
    volumeMounts:
    - name: fsgroup-demo-vol
      mountPath: /data/demo
