violating_resources/pod-security-policy/fsgroup/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata: # kpt-merge: /fsgroup
  name: fsgroup
tests:
  - name: fsgroup
    template: template.yaml
    constraint: samples/psp-fsgroup/constraint.yaml
    cases:
      - name: example-disallowed
        object: samples/psp-fsgroup/example_disallowed.yaml
        assertions:
          - violations: yes
      - name: example-allowed
        object: samples/psp-fsgroup/example_allowed.yaml
        assertions:
          - violations: no
